# proxy-accounts

./: .env.sample  .gitignore  Cargo.toml  Makefile  Readme.md  bun.lockb  bunfig.toml  consts.mjs  docker-compose.yml  index.html  package.json  svelte.config.js  tailwind.config.ts  testSetup.ts  vite.config.ts
.svelte-kit/: ambient.d.ts
_app/: env.js  version.json
_app/immutable/assets/: 0.CtJ9GaWr.css  0.se7rV2WA.css  _layout.B3lpScm8.css  _layout.Bz7FhHX4.css
_app/immutable/chunks/: B-isMW0w.js  B-u8j8Gs.js  B0joSbvK.js  BI-27ucn.js  BgsvDmwH.js  BvZKATU7.js  BvjzHYVT.js  CHlaPP8z.js  CQCCh0F9.js  CY-jD4EX.js  Cfa1YLaX.js  Cg4kY_yE.js  ChiHUv0U.js  Ckl62d5b.js  CqCmu3ac.js  CuiLy9nx.js  D99D9AG6.js  D_6DSFiX.js  DloCHuWl.js  DsEquaHT.js  DzqdF9_1.js  M3nIEjSH.js  RIyPtQ7t.js  Zt_5rXFS.js  aN0JhryN.js  gpDcw7Qc.js  kqcFXBkb.js
_app/immutable/entry/: app.BLBOoI0Q.js  app.CL50hVCx.js  app.DMNXctAW.js  start.BzAxfQ4g.js  start.YZd7HoK4.js  start.d1_ug0sD.js
_app/immutable/nodes/: 0.BewGh2tL.js  0.CrvSB7dY.js  0.MMuYNKD2.js  1.DTIteszK.js  1.DdUNtmUn.js  1.jMF-fKYh.js  2.BL0l7wdJ.js  2.DcdUt_jh.js  2.JJ55xb4h.js
configs/: config.toml  contract_config.json  gas_config.json
contracts/cw82-proxy-account/: Cargo.toml  README.md
contracts/cw82-proxy-account/examples/: schema.rs
contracts/cw82-proxy-account/schema/: cw82_proxy_account.json
contracts/cw82-proxy-account/schema/raw/: execute.json  instantiate.json  query.json
contracts/cw82-proxy-account/src/: action.rs  contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  utils.rs
contracts/cw83-proxy-registry/: Cargo.toml  README.md
contracts/cw83-proxy-registry/examples/: schema.rs
contracts/cw83-proxy-registry/schema/: cw83_proxy_registry.json
contracts/cw83-proxy-registry/schema/raw/: execute.json  query.json
contracts/cw83-proxy-registry/src/: contract.rs  error.rs  execute.rs  msg.rs  query.rs  registry.rs  state.rs
src/: app.html  app.postcss  chain.ts  checks.ts  config.ts  contract.ts  proxy.ts  types.ts
src/lib/: accounts.ts  appkit.ts  assets.ts  chains.ts  clients.ts  cosmos.ts  index.ts  prices.ts  registry.ts  routes.ts  signers.ts  toasts.ts  tokens.ts  types.ts  utils.ts  values.ts  vars.ts
src/lib/components/: dashHeader.svelte
src/lib/components/common/: calculated.svelte  container.svelte  copyButton.svelte  dashHeader.svelte  elevatedBox.svelte  elevatedButtonBox.svelte  elevatedItemBox.svelte  feeAccordion.svelte  getStarted.svelte  ghostBox.svelte  ghostInput.svelte  ghostSelect.svelte  inTokenInput.svelte  inTokens.svelte  line.svelte  outTokenButton.svelte  outTokens.svelte  separator.svelte
src/routes/: +layout.svelte  +page.svelte
tests/: minting.test.ts
(+14 files in other folders)
